RE https://github.com/telecelplay/mobileapp/issues/548 - implement additional fromWallet field on topup scripts